force-app/main/default/objects/ParticipantEnrollmentPatientDelJunction__c/ParticipantEnrollmentPatientDelJunction__c.object-meta.xml
<CustomObject>
    <description>This object is the junction object between Participant Enrollment and Patient Delegate contact object to be used on requirement basis</description>
   
    <label>ParticipantEnrollmentPatientDelJunction</label>
    <nameField>
        <displayFormat>PERPD-{00000}</displayFormat>
        <label>ParticipantEnrollmentPatientDelJunction</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ParticipantEnrollmentPatientDelJunctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>