force-app/main/default/objects/ParticipantEnrollmentPatientDelJunction__c/fields/Participant_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Participant_Enrollment__c</fullName>
        <label>Participant Enrollment</label>
        <referenceTo>Participant_Enrollment__c</referenceTo>
        <relationshipLabel>ParticipantEnrollmentPatientDelJunctions</relationshipLabel>
        <relationshipName>ParticipantEnrollmentPatientDelJunctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
</CustomField>