force-app/main/default/objects/ParticipantEnrollmentPatientDelJunction__c/fields/Patient_Delegate_Contact__c.field-meta.xml
<CustomField>
    <fullName>Patient_Delegate_Contact__c</fullName>
        <label>Patient Delegate Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ParticipantEnrollmentPatientDelJunctions</relationshipLabel>
        <relationshipName>ParticipantEnrollmentPatientDelJunctions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
</CustomField>