force-app/main/default/objects/ParticipantEnrollmentPatientDelJunction__c/fields/Process_Type__c.field-meta.xml
<CustomField>
   <fullName>Process_Type__c</fullName>
        <label>Process Type</label>
        <length>100</length>
        <type>Text</type>
</CustomField>