force-app/main/default/objects/ParticipantEnrollmentPatientDelJunction__c/fields/Welcome_Message_Sent__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Message_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Welcome Message Sent</label>
        <type>Checkbox</type>
</CustomField>